-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Query Optimization
-
Fully Compatible
-
ALL
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Data race condition
The value of the shared data will be determined by the interleaving of thread execution. Thread shared data is accessed without holding an appropriate lock, possibly causing a race condition
/src/mongo/db/traffic_recorder.cpp:114: MISSING_LOCK 177483 Accessing "this->_trafficStats" without holding lock "mongo::TrafficRecorder::Recording._mutex". Elsewhere, "mongo::TrafficRecorder::Recording._trafficStats" is written to with "Recording._mutex" held 2 out of 3 times.
- is related to
-
SERVER-112103 Refactor Recording to support delayed start
-
- Closed
-