SERVER-113114 Resolve data race condition for _trafficStats (#43458)

GitOrigin-RevId: ba664785738e62e7d999b39f3152662d99bd34e1